# WizardDocx

./: README.md  pyproject.toml
docs_source/: conf.py  index.rst  intro.rst
docs_source/_static/: LICENSE
wizarddocx/: __init__.py  wizard_extract.py
wizarddocx/utils/errors/: __init__.py  errors.py  errors_handle.py
wizarddocx/wizard_docx/: extraction_text.py
wizarddocx/wizard_docx/tool/: doc_reader.py  docx_reader.py
